ZGC: Division by zero in heuristics

XMLWordPrintable

    • gc
    • b03
    • x86
    • linux

        When running hs :tier1 tests, with ubsan enabled (configure flag --enable-ubsan), in a couple of ZGC tests like
        compiler/uncommontrap/TestDeoptOOM_ZGenerational.jtr
        gc/stringdedup/TestStringDeduplicationInterned_ZGenerational.jtr
        this division by zero is reported :

        /jdk/src/hotspot/share/gc/z/zDirector.cpp:531:87: runtime error: division by zero
            #0 0x7f34901420b0 in calculate_young_to_old_worker_ratio /jdk/src/hotspot/share/gc/z/zDirector.cpp:531
            #1 0x7f34901420b0 in select_worker_threads /jdk/src/hotspot/share/gc/z/zDirector.cpp:690
            #2 0x7f34944021d3 in select_worker_threads /jdk/src/hotspot/share/gc/z/zDirector.cpp:685
            #3 0x7f34944021d3 in initial_workers /jdk/src/hotspot/share/gc/z/zDirector.cpp:780
            #4 0x7f34944034d5 in initial_workers /jdk/src/hotspot/share/gc/z/zLock.inline.hpp:114
            #5 0x7f34944034d5 in start_major_gc /jdk/src/hotspot/share/gc/z/zDirector.cpp:784
            #6 0x7f34944034d5 in start_gc /jdk/src/hotspot/share/gc/z/zDirector.cpp:812
            #7 0x7f34944034d5 in ZDirector::run_thread() /jdk/src/hotspot/share/gc/z/zDirector.cpp:908
            #8 0x7f34945831f8 in ZThread::run_service() /jdk/src/hotspot/share/gc/z/zThread.cpp:29
            #9 0x7f34917e4f89 in ConcurrentGCThread::run() /jdk/src/hotspot/share/gc/shared/concurrentGCThread.cpp:48
            #10 0x7f3493ee8b0f in Thread::call_run() /jdk/src/hotspot/share/runtime/thread.cpp:225
            #11 0x7f34933dae75 in thread_native_entry /jdk/src/hotspot/os/linux/os_linux.cpp:846
            #12 0x7f349991c6e9 in start_thread (/lib64/libpthread.so.0+0xa6e9) (BuildId: 2f8d3c2d0f4d7888c2598d2ff6356537f5708a73)
            #13 0x7f3498f1550e in clone (/lib64/libc.so.6+0x11850e) (BuildId: f732026552f6adff988b338e92d466bc81a01c37)

              Assignee:
              Erik Österlund
              Reporter:
              Matthias Baesken
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: