8332717: ZGC: Division by zero in heuristics